using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const int NUM_ROWS = 100;
    public const int NUM_COLUMNS = 100;

    public const sbyte EMPTY_CODE = -1;
    public const int DEFAULT_DOOR_BREADTH = 2;
    public const int ROOM_MARGIN = 1;

    public const int NUM_STORIES = 3;
    public const int BASEMENT = 0;
    public const int GROUND_STORY = 1;
    public const int UPPER_STORY = 2;

    public const int ENTITY_SORTING_ORDER = 1;

    public const string NORTH_ANIMATION_STRING = "North";
    public const string SOUTH_ANIMATION_STRING = "South";
    public const string EAST_ANIMATION_STRING = "East";
    public const string WEST_ANIMATION_STRING = "West";

    public const string NORTH_LEFT_ANIMATION_STRING = "North_Left";
    public const string NORTH_RIGHT_ANIMATION_STRING = "North_Right";
    public const string SOUTH_LEFT_ANIMATION_STRING = "South_Left";
    public const string SOUTH_RIGHT_ANIMATION_STRING = "South_Right";
    public const string EAST_TOP_ANIMATION_STRING = "East_Top";
    public const string EAST_BOTTOM_ANIMATION_STRING = "East_Bottom";
    public const string WEST_TOP_ANIMATION_STRING = "West_Top";
    public const string WEST_BOTTOM_ANIMATION_STRING = "West_Bottom";
}
